* unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.7.2
    - Polish translation improved
    - fixed language autosetting
    - fixed Drag & Drop under Windows

* Thu Apr 17 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.1
    - fixed translating of Gradient Effect widgets
    - fixed initialization of Gradient Effect
    - patched finding icon theme in Qt5 (Tango, oxygen and gnome themes are supported)

* Fri Feb 28 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7
    - added filter effect
    - added disabling SVG tab if no SVG file loaded on file tree view and the view is not empty
    - added Version class
    - added effects storage in XML files
    - added histogram stretching and equalization effects
    - added clearing file list before session restoring
    - added initializing session and effects directory based restored session from command line
    - improved loading files contains incomplete/broken metadata
    - CMake: build using choosed Qt version (4/5)
    - code update for Qt 5 compatibility
    - bugfix: painting effect when desired size typed in Bytes now
    - String class moved from MetadataUtils namespace to sir namespace
    - Polish translation updated

* Sun Apr 28 2013 - Marek Jędryka <jedryka89@gmail.com> - v2.6
    - added command line arguments --help, --session and --lang support
    - added background color in convertion options
    - added SVG convertion tab: remove single text node and group of text node containing specifed string
    - added adding frame, text and picture effect and effect tab
    - added sessions storage in XML files
    - create empty metadata when converting from SVG file
    - set current date time in Exif if needed
    - iconsets moved from UI to C++ code for uic<4.8 compatibility
    - Polish translation updated

* Wed Nov 14 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5.1
    - relative path bug-fix

* Tue Nov 13 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5
    - project moved to CMake